feat: data validations - favicon - fix: kebab-case for ids